// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Display /> matches snapshot: L - false, C - false 1`] = `
<div
  className="display panel"
>
  <div
    className="led green-led"
  >
    Unlocked
  </div>
  <div
    className="led green-led"
  >
    Open
  </div>
</div>
`;

exports[`<Display /> matches snapshot: L - false, C - true 1`] = `
<div
  className="display panel"
>
  <div
    className="led green-led"
  >
    Unlocked
  </div>
  <div
    className="led red-led"
  >
    Closed
  </div>
</div>
`;

exports[`<Display /> matches snapshot: L - true, C - false 1`] = `
<div
  className="display panel"
>
  <div
    className="led red-led"
  >
    Locked
  </div>
  <div
    className="led green-led"
  >
    Open
  </div>
</div>
`;

exports[`<Display /> matches snapshot: L - true, C - true 1`] = `
<div
  className="display panel"
>
  <div
    className="led red-led"
  >
    Locked
  </div>
  <div
    className="led red-led"
  >
    Closed
  </div>
</div>
`;
